--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,11 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
+        distribution: 'temurin'  # Added distribution
 
     - name: Build with Maven
       run: mvn clean install
 
     - name: Run tests
       run: mvn test
+
