--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,3 @@
-name: Java CI
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,21 +5,31 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'temurin'
 
     - name: Display Maven version
       run: mvn -v
-      working-directory: ./hello-world-example
 
     - name: Build with Maven
       run: mvn clean install
-      working-directory: ./hello-world-example
 
-    - name: Run tests
-      run: mvn test
-      working-directory: ./hello-world-example
+    - name: Run tests and generate coverage report
+      run: mvn test jacoco:report
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@v2.1.0
+      with:
+        args: >
+          -Dsonar.projectKey=PROJECT_KEY
+          -Dsonar.organization=ORGANIZATION
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  deploy:
+    needs: build
